# WeakLibInterp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PROMPT_build.md  PROMPT_plan.md  README.md  TODO.md
.claude/: settings.local.json
.claude/agents/: ralph-build-briefer.md  ralph-builder.md  ralph-plan-synthesizer.md  ralph-researcher.md  ralph-spec-author.md  ralph-synthesizer.md
.github/workflows/: ci.yml
cactus/: wli.th
cactus/config/: setup-cactus-tree.sh  smoke.par  wli-carpetx-aarch64.cfg.in  wli-carpetx.th
cactus/thorns/TestWeakLibInterp/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
cactus/thorns/TestWeakLibInterp/src/: make.code.defn  test_wli.cxx
cactus/thorns/WeakLibInterp/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
cactus/thorns/WeakLibInterp/src/: build.sh  detect.sh  make.code.defn  make.code.deps
cactus/thorns/WeakLibInterpTest/: configuration.ccl  interface.ccl  param.ccl  schedule.ccl
cactus/thorns/WeakLibInterpTest/src/: make.code.defn  smoke.cxx
docs/: BUILD.md
specs/: README.md  amrex-device-interface.md  build-integration.md  cactus-integration.md  eos-interpolation.md  eos-inversion.md  fortran-parity-and-tolerances.md  opacity-brem.md  opacity-differentiate.md  opacity-emab-iso.md  opacity-nes-pair.md  regression-suite-design.md  table-format-and-io.md
specs/fixtures/: tables.provenance  wl-EOS-SFHo-15-25-50.h5ls  wl-Op-SFHo-15-25-50-E40-Brem.h5ls  wl-Op-SFHo-15-25-50-E40-EmAb.h5ls  wl-Op-SFHo-15-25-50-E40-Iso.h5ls  wl-Op-SFHo-15-25-50-E40-NES.h5ls  wl-Op-SFHo-15-25-50-E40-Pair.h5ls
specs/tools/: validate_specs.sh  validate_thorn.sh
src/: CMakeLists.txt
src/core/: wli_compare.H  wli_index.H  wli_interp.H  wli_real.H  wli_table.H
src/eos/: wli_eos.H  wli_eos_inversion.H
src/io/: wli_io_bcast_detail.H  wli_io_eos.H  wli_io_eos.cpp  wli_io_hdf5_detail.H  wli_io_opacity.H  wli_io_opacity.cpp
src/lib/: CMakeLists.txt  wli.cpp  wli_eos.H  wli_eos_inversion.H  wli_interp.H  wli_io_eos.H  wli_io_eos.cpp  wli_io_opacity.H  wli_io_opacity.cpp  wli_opacity.H  wli_table.H
src/opacity/: wli_opacity.H  wli_opacity_brem.H  wli_opacity_emab_iso.H  wli_opacity_nes_pair.H
test/: CMakeLists.txt  h5ls_snapshot.H  test_brem_diff_point.cpp  test_brem_point.cpp  test_coverage_matrix.cpp  test_emab_diff_point.cpp  test_emab_legacy_fallback.cpp  test_emab_point.cpp  test_eos_diff_point.cpp  test_eos_inversion_describe.cpp  test_eos_inversion_dey.cpp  test_eos_inversion_family.cpp  test_eos_point.cpp  test_eos_reader_schema.cpp  test_index_roundtrip.cpp  test_interp_core.cpp  test_iso_diff_point.cpp  test_iso_point.cpp  test_layout_roundtrip.cpp  test_mpi_root_bcast.cpp  test_nes_detailed_balance.cpp  test_nes_pair_diff_point.cpp  test_nes_pair_point.cpp  test_opacity_reader_schema.cpp  test_pair_crossing_symmetry.cpp  test_parallelfor_wrappers.cpp  test_perturbation_meta.cpp  test_production_tables.cpp  test_rank_consistency.cpp  test_scaffold.cpp  test_table_residency.cpp  wli_rank_digest.H
tools/: build.sh  cactus-build.sh  provision-amrex.sh  q  test.sh  wli-common.sh
